kubernetes/base/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
  labels:
    name: ingress-nginx
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    name: cert-manager
    cert-manager.io/disable-validation: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: airflow
  labels:
    name: airflow
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    name: argocd
