kubernetes/base/all-nodeports.yaml
---
# Airflow на порту 30880
apiVersion: v1
kind: Service
metadata:
  name: airflow-webserver-nodeport
  namespace: airflow
spec:
  type: NodePort
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
    nodePort: 30880
  selector:
    component: webserver
    tier: airflow
---
# Grafana на порту 30300
apiVersion: v1
kind: Service
metadata:
  name: grafana-nodeport
  namespace: monitoring
spec:
  type: NodePort
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
    nodePort: 30300
  selector:
    app.kubernetes.io/name: grafana
---
# Prometheus на порту 30090
apiVersion: v1
kind: Service
metadata:
  name: prometheus-nodeport
  namespace: monitoring
spec:
  type: NodePort
  ports:
  - name: http
    port: 9090
    targetPort: 9090
    protocol: TCP
    nodePort: 30090
  selector:
    app.kubernetes.io/name: prometheus
    prometheus: prometheus-prometheus
---
# ArgoCD на порту 30443
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-nodeport
  namespace: argocd
spec:
  type: NodePort
  ports:
  - name: https
    port: 443
    targetPort: 8080
    protocol: TCP
    nodePort: 30443
  selector:
    app.kubernetes.io/name: argocd-server
